--- a/src/locales/zh-tw.json
+++ b/src/locales/zh-tw.json
@@ -67,6 +67,11 @@
         "sharing": "民眾分享",
         "environment1": "生態",
         "environment2": "人文",
-        "environment3": "氣候"
+        "environment3": "氣候",
+        "managerUnit": "認養單位",
+        "relatedTrial": "關聯步道",
+        "trailClass0": "國家級步道",
+        "trailClass1": "區域級步道",
+        "trailClass2": "其他"
 
 }
