--- a/src/locales/zh-tw.json
+++ b/src/locales/zh-tw.json
@@ -72,6 +72,7 @@
         "relatedTrial": "關聯步道",
         "trailClass0": "國家級步道",
         "trailClass1": "區域級步道",
-        "trailClass2": "其他"
-
+        "trailClass2": "其他",
+        "photographer": "攝影者",
+        "more": "閱讀更多"
 }
